--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-Flask==3.1.1
-Flask-SQLAlchemy==3.1.1
-SQLAlchemy==2.0.43
+Flask>=3.1.2
+Flask-SQLAlchemy>=3.1.1
+SQLAlchemy>=2.0.43
 Flask-Talisman==1.1.0
-Werkzeug==3.1.3
-Pygments==2.19.2
-bleach==6.2.0
-Flask-Migrate==4.1.0
-gunicorn==23.0.0.
+Werkzeug>=3.1.3
+Pygments>=2.19.2
+bleach>=6.2.0
+Flask-Migrate>=4.1.0
+gunicorn>=23.0.0
